@@ -7,6 +7,6 @@ AUX gnutls-2.6.3-irix.patch 675 RMD160 cdb6f95bd64d1425b7ba61fdf880fa8e5c5db889 
 DIST gnutls-2.6.6.tar.bz2 5116385 RMD160 dc6e717e38741628508208244f07fed8faedb13c SHA1 d1693e611aa7270f14bc500bd56ef529ffcb1703 SHA256 03d85b8b51ca7885740c69b87663963c58fe7c9672da0a43e45732078fabdc9e
 DIST gnutls-2.9.0.tar.bz2 6104030 RMD160 5d6c02af24a62e0f9880720c9ab0233e7e4f58d6 SHA1 a52397f6f52970f51f8f6e49732a0290c59bbb0d SHA256 64f87ab21820452f9efa042a99b16a744fbd570cad1f67806ca5dc01e2afd707
 EBUILD gnutls-2.6.6.ebuild 2469 RMD160 d27086e399bbc2cefeb921e0f8d3d65645018b7b SHA1 869cdad7c2a04068d92771fc3790ffa02b36658e SHA256 283a2a3348c413d7ed42c91e48621ae862ef5f7024f90bae673326c36b95129a
-EBUILD gnutls-2.9.0.ebuild 2260 RMD160 18a5f05387abf128c939a6c5d089dfc5ef26f849 SHA1 696d0d770bcf04779619f72fb25c0e70407dc2a7 SHA256 29a514d993eab15bdfde4ee3445d20af6a2c82b9f6d5bfac99e6a0d7a4da3f00
-MISC ChangeLog 31045 RMD160 ddeb3b4671bfd3dad5ec390bb6b83c8f1da80065 SHA1 2de33529f1f5dacc7ce7ff6246b5fc86ced393a2 SHA256 a3bfcd5c0377b6bf57ecfedc1793445d10e460d957baf2450c0b2dfe01c33b7f
+EBUILD gnutls-2.9.0.ebuild 2425 RMD160 387caa7a168fccca5342d9dad6013b73c377d5ab SHA1 17a4cf4ea054d025b2eb2ebff37b804218585ab8 SHA256 83a9eee7fa8ae13812fba8b7b8984af1c0b3252a90505cb0355294ae20e090bc
+MISC ChangeLog 31214 RMD160 5c8f24390fd09e6e547c12c7edc619a7989bf5d9 SHA1 d2db33fbf7be0a8829730a98b185ffb0b2db30f8 SHA256 2e29795ba7721937548616d9aaab6b26db1f246f89bd6c45a31a7518a0500f26
 MISC metadata.xml 160 RMD160 61ea9f9370afee3db802f40f7c6b2edd2f5347cf SHA1 51cf29a3589cff823294704e225b0de18f65e6dd SHA256 7419f4e73ddd07284403525f1380824fc68280cad69e2dfae0645ad52b33ef10
